@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{497, 83}, {914, 1077}}</string>
+	<string>{{609, 73}, {912, 1102}}</string>
 </dict>
 </plist>
